@@ -1,3 +1,15 @@
+2008-02-27  Jens Granseuer  <jensgr@gmx.net>
+
+	* file-transfer-dialog.c: (file_transfer_dialog_update_num_files),
+	(file_transfer_dialog_response), (file_transfer_dialog_finalize),
+	(file_transfer_dialog_set_prop), (file_transfer_dialog_class_init),
+	(file_transfer_dialog_init), (file_transfer_dialog_get_type),
+	(file_transfer_job_update_before),
+	(file_transfer_job_update_after), (file_transfer_job_destroy),
+	(file_transfer_dialog_done), (file_transfer_dialog_cancel),
+	(file_transfer_job_schedule), (file_transfer_dialog_copy_async):
+	* file-transfer-dialog.h: port to gio
+
 2008-02-25  Thomas Wood  <thos@gnome.org>
 
 	* theme-thumbnail.c: (message_from_child): Return FALSE on error or EOF,
