@@ -1,3 +1,8 @@
+2008-02-27  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-installer.c: (gnome_theme_install_from_uri): adapt to new
+	FileTransferDialog that uses gio instead of GnomeVFS
+
 2008-02-16  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-desktop.c: (wp_option_menu_set), (wp_load_stuffs):
